--- a/templates/kibana.yml.j2
+++ b/templates/kibana.yml.j2
@@ -33,7 +33,7 @@ elasticsearch.preserveHost: true
 kibana.index: ".kibana"
 
 # The default application to load.
-kibana.defaultAppId: "discover"
+kibana.defaultAppId: "dashboard/Default"
 
 # If your Elasticsearch is protected with basic authentication, these settings provide
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
